--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon node src/db/mongoose.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.1.10"
+    "express": "^4.19.2",
+    "mongodb": "^3.1.10",
+    "mongoose": "^8.3.3",
+    "nodemon": "^3.1.0",
+    "validator": "^13.11.0"
   }
 }
