--- a/exercise2/package.json
+++ b/exercise2/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha index.test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.4.1",
     "exceljs": "^4.4.0"
+  },
+  "devDependencies": {
+    "mocha": "^10.4.0"
   }
 }
